# saoe-mvp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SECURITY_INVARIANTS.md
.claude/: launch.json
docs/: SAOE_Context_v1.1.md  production_gaps.md  threat_model.md
docs/logs/: INSTALL_LOG.md  LESSONS_LEARNED_LOG.md  TESTING_LOG.md
docs/testing/: BUILD_TEST_PLAN.md  E2E_TEST_PLAN.md  UNIT_TEST_PLAN.md
examples/attacks/: invalid_plan_signature.py  path_traversal.py  (+2 more)
logs/: INSTALL.md  LESSONS_LEARNED.md  TESTING.md
saoe-core/: pyproject.toml
saoe-core/saoe_core/: publisher.py
saoe-core/saoe_core/audit/: events_sqlite.py  ledger_stub.py
saoe-core/saoe_core/crypto/: age_vault.py  keyring.py
saoe-core/saoe_core/satl/: envelope.py  validator.py
saoe-core/saoe_core/toolgate/: toolgate.py
saoe-core/saoe_core/util/: safe_fs.py
saoe-core/tests/: conftest.py
saoe-core/tests/demo/: conftest.py  test_deployment_agent_unit.py  test_image_decompression_bomb.py  test_intake_form.py  test_log_viewer_image_serving.py  test_log_viewer_security.py  test_over_agent_dispatch.py  test_text_formatter_security.py
saoe-core/tests/e2e/: conftest.py  test_deployment_join_completeness.py
saoe-core/tests/unit/: test_age_vault.py  test_audit.py  test_envelope_sign_verify.py  test_execution_plan_and_toolgate.py  test_ft_tickets.py  test_keyring.py  test_payload_schema_rejection.py  test_receiver_id_mismatch.py  test_rt_break_glass.py  test_rt_size_bombs.py  test_safe_fs.py  test_template_resolution_and_signature.py
saoe-openclaw/: pyproject.toml
(+15 files in other folders)
